--- a/src/components/Screen/screen.module.scss
+++ b/src/components/Screen/screen.module.scss
@@ -1,7 +1,7 @@
-.note {
-	padding: 190px 46px 16px 70px;
-	min-width: 100vw;
-	min-height: 100vh;
+.container {
+	padding: 0 70px;
+	width: 100%;
+	height: 100%;
 	overflow: hidden;
 
 	img {
