--- a/src/components/ScrollableNote/scrollableNote.module.scss
+++ b/src/components/ScrollableNote/scrollableNote.module.scss
@@ -1,15 +1,17 @@
 .container {
 	display: flex;
-	//height: 450px;
+	height: 100%;
 }
 
 .note {
 	width: 780px;
 	background: white;
-	padding: 20px 30px;
+	margin-left: 30px;
+	padding: 30px 40px;
 	overflow: scroll;
 	box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.3);
 	border-radius: 40px;
+	touch-action: none;
 
 	&::-webkit-scrollbar {
 		display: none;
