--- a/src/pages/Promo/promo.module.scss
+++ b/src/pages/Promo/promo.module.scss
@@ -1,29 +1,30 @@
-.note {
+.container {
 	text-transform: uppercase;
 	position: relative;
 	z-index: 1;
 
 	.title {
 		display: block;
-		font-size: 100px;
+		font-size: 105px;
 		line-height: 109px;
 		font-weight: 300;
 		letter-spacing: 4px;
 	}
 
 	.subtitle {
+		margin-bottom: 30px;
 		display: block;
-		font-size: 34px;
+		font-size: 26px;
 		font-weight: 400;
 	}
 
-	.bold {
+	strong {
 		font-weight: 900;
 	}
 
 	.buttonContainer {
 		position: absolute;
 		bottom: 20px;
-		right: 100px;
+		right: 50px;
 	}
 }
