--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,9 +20,8 @@ body {
 }
 
 #root {
-	padding: 3rem;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
 }
