--- a/src/components/Screen/screen.module.scss
+++ b/src/components/Screen/screen.module.scss
@@ -1,8 +1,8 @@
 .container {
-	padding: 0 70px;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	position: relative;
 
 	img {
 		pointer-events: none;
@@ -14,7 +14,7 @@
 	overflow: hidden;
 	height: 100vh;
 	width: 100vw;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: -1;
